# infinitetalk

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-test.yml  release.yml
configs/: 480p_4step.yaml  720p_4step.yaml  infinite_length.yaml  lora_config.yaml
infinitetalk/: __init__.py  cli.py
infinitetalk/api/: __init__.py  gradio_app.py  openai_routes.py  server.py
infinitetalk/core/: __init__.py  anchor_manager.py  consistency_lock.py  sparse_frame_generator.py  temporal_manifold.py
infinitetalk/models/: __init__.py  attention_processor.py  hybrid_unet.py  lora_manager.py
infinitetalk/parallelism/: __init__.py  fsdp_wrapper.py  multi_gpu.py  ulysses_attn.py
infinitetalk/pipelines/: __init__.py  inference_pipeline.py  video_dubbing.py
infinitetalk/quantization/: __init__.py  fp8_engine.py  mixed_precision.py
infinitetalk/utils/: __init__.py  audio_processing.py  checkpoint.py  video_io.py
scripts/: benchmark.py  download_weights.sh  setup_env.sh
tests/: test_api.py  test_lora.py  test_sparse_frame.py
